--- a/css/style.css
+++ b/css/style.css
@@ -1,333 +1,278 @@
 /* reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-/* estilos generales */
-
-header{
-    background-color: #f4c6b8;
-    border-style: solid;
-    margin-bottom: 5px;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
+/*estilos generales*/
+/*estilos del header*/
+header {
+  background-color: #f4c6b8;
+  border-style: solid;
+  margin-bottom: 10px;
+  font-family: 'Anuphan', sans-serif;
+  font-family: 'Pompiere', cursive; }
+  header .color-navbar {
+    color: black;
+    font-size: 20px;
     font-weight: bold;
-}
-.color-navbar{
-    color:rgb(0, 0, 0);
-    font-weight: bold;
-    text-decoration: underline;
-}
+    text-decoration: underline; }
+  header .color-navbar:hover {
+    background-color: black;
+    color: whitesmoke; }
 
-.color-navbar:hover{
-    background-color: rgb(0, 0, 0);
-    color: whitesmoke;
-}
+/*estilos para parrafos*/
+p {
+  font-family: calibri; }
 
-footer{
-    background-image: url(../img/Fondo-Footer.png);
-    background-size: contain;
-    display: grid;
-}
-
-footer ul{
+/*estilos del footer*/
+footer {
+  background: linear-gradient(to right, #f4c6b8 50%, black 80%);
+  display: grid; }
+  footer ul {
     display: grid;
     grid-template-columns: 8fr 0.5fr 0.5fr 0.5fr 0.5fr;
-    list-style: none;
-}
+    list-style: none; }
+    footer ul li h2 {
+      color: black;
+      font-size: 25px;
+      display: inline-block;
+      font-family: 'Anuphan', sans-serif;
+      font-family: 'Pompiere', cursive; }
 
-footer ul li h2{
-    color: rgb(0, 0, 0);
-    background: #f4c6b8;
-    font-size: 20px;
-    display: inline-block;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-    
-    
+/*estilos del index*/
+.bienvenida {
+  text-align: center;
+  margin-bottom: 5rem;
+  text-decoration: underline;
+  font-family: 'Anuphan', sans-serif;
+  font-family: 'Pompiere', cursive; }
 
-}
-/* estilos del index*/
-
-.bienvenida{
-    text-align: center;
-    margin-bottom: 5rem;
-    text-decoration: underline;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.portada-uno{
-    display:grid;
-    grid-template-rows: 0.6fr 0.4fr;
-    grid-template-columns: 1fr;
-    justify-items: center;
-}
-
-.portada-dos{
-    display:grid;
-    grid-template-rows: 0.6fr 0.4fr;
-    grid-template-columns: 1fr;
-    justify-items: center; 
-}
-
-.parrafos-portadas{
-    justify-self: center;
-    width: 80%;
-}
-
-.img-uno{
+.portada-uno {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-rows: 0.6fr 0.4fr;
+  grid-template-columns: 1fr; }
+  .portada-uno .img-uno {
     height: 100%;
     width: 100%;
-    object-fit: cover;
-}
+    object-fit: cover; }
 
-.img-dos{
+.portada-dos {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-rows: 0.6fr 0.4fr;
+  grid-template-columns: 1fr; }
+  .portada-dos .img-dos {
     height: 100%;
     width: 100%;
-    object-fit: cover;
-}
+    object-fit: cover; }
 
+.parrafos-portadas {
+  justify-self: center;
+  width: 60%; }
 
+.h1-haircare, .h1-intimates, .main-nosotros .h1-nosotros {
+  text-align: center;
+  text-decoration: underline;
+  margin-bottom: 30px;
+  font-family: 'Anuphan', sans-serif;
+  font-family: 'Pompiere', cursive; }
+
+.contenedor-parrafos-haircare, .contenedor-parrafos-intimates {
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 40px; }
 
 /*estilos haircare*/
+.h2-haircare {
+  text-align: center;
+  margin-bottom: 35px;
+  font-family: 'Anuphan', sans-serif;
+  font-family: 'Pompiere', cursive; }
 
-.h1-haircare{
-    text-align: center;
-    text-decoration: underline;
-    margin-bottom: 30px;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.h2-haircare{
-    text-align: center;
-    margin-bottom: 35px;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.contenedor-parrafos-haircare{
-    text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-bottom: 30px;
-}
-
-.contenedor-productos-hc{
+.contenedor-productos-hc {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(8, 1fr); }
+  .contenedor-productos-hc .producto-hc {
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(8, 1fr);
     justify-items: center;
-    text-align: center;
-}
-
-.producto-hc{
-display: grid;
-justify-items: center;
-align-items: center;
-margin: 20px;
-}
-
-.img-hc{
-    width: 100%;
+    align-items: center;
+    margin: 20px; }
+  .contenedor-productos-hc h3 {
+    font-family: calibri;
+    font-size: 17px; }
+  .contenedor-productos-hc .img-hc {
     height: 100%;
-    object-fit: cover;
-}
+    width: 100%;
+    object-fit: cover; }
+
+.h1-haircare, .h1-intimates, .main-nosotros .h1-nosotros {
+  text-align: center;
+  text-decoration: underline;
+  margin-bottom: 30px;
+  font-family: 'Anuphan', sans-serif;
+  font-family: 'Pompiere', cursive; }
+
+.contenedor-parrafos-haircare, .contenedor-parrafos-intimates {
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 40px; }
 
 /*estilos intimates*/
+.h2-intimates {
+  text-align: center;
+  margin-bottom: 35px;
+  font-family: 'Anuphan', sans-serif;
+  font-family: 'Pompiere', cursive; }
 
-.h1-intimates{
-    text-align: center;
-    text-decoration: underline;
-    margin-bottom: 30px;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.h2-intimates{
-    text-align: center;
-    margin-bottom: 35px;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.contenedor-parrafos-intimates{
-    text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
-    margin-bottom: 40px;
-}
-
-.contenedor-productos-intimates{
+.contenedor-productos-intimates {
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(6, 1fr); }
+  .contenedor-productos-intimates .producto-intimates {
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(6, 1fr);
     justify-items: center;
-    text-align: center;
-}
+    align-items: center;
+    margin: 20px; }
+    .contenedor-productos-intimates .producto-intimates h3 {
+      font-family: calibri;
+      font-size: 25px; }
+    .contenedor-productos-intimates .producto-intimates h4 {
+      font-family: calibri;
+      font-size: 20px; }
+    .contenedor-productos-intimates .producto-intimates .img-intimates {
+      width: 300px;
+      height: 300px;
+      object-fit: cover; }
 
-.producto-intimates{
-display: grid;
-justify-items: center;
-align-items: center;
-margin: 20px;
-}
+.h1-haircare, .h1-intimates, .main-nosotros .h1-nosotros {
+  text-align: center;
+  text-decoration: underline;
+  margin-bottom: 30px;
+  font-family: 'Anuphan', sans-serif;
+  font-family: 'Pompiere', cursive; }
 
-.img-intimates{
-    width: 300px;
-    height: 300px;
-    object-fit: cover;
-}
+.contenedor-parrafos-haircare, .contenedor-parrafos-intimates {
+  text-align: center;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-bottom: 40px; }
 
 /*estilos nosotros*/
-
-.main-nosotros{
-    display: grid;
-    justify-items: center;
-}
-
-.h1-nosotros{
+.main-nosotros {
+  display: grid;
+  justify-items: center; }
+  .main-nosotros .h2-nosotros {
     text-align: center;
-    margin-bottom: 25px;
-    text-decoration: underline;
+    margin-bottom: 30px;
     font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.h2-nosotros{
-    text-align: center;
-    margin-bottom: 35px;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.contenedor-parrafos-nosotros{
+    font-family: 'Pompiere', cursive; }
+  .main-nosotros .contenedor-parrafos-nosotros {
     text-align: center;
     margin-left: 20%;
-    margin-right: 20%;   
-}
-
-.contenedor-img-nosotros{
+    margin-right: 20%; }
+  .main-nosotros .contenedor-img-nosotros {
     grid-template-columns: 100%;
-    grid-template-rows: repeat(2,50%);
-}
-
-.img-nosotros{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    margin-bottom: 5px;
-}
-
+    grid-template-rows: repeat(2, 50%); }
+    .main-nosotros .contenedor-img-nosotros .img-nosotros {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      margin-bottom: 5px; }
 
 /*estilos contacto*/
+.contenedor-contacto {
+  width: 80%;
+  margin: auto;
+  margin-top: 75px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px; }
+  .contenedor-contacto h1 {
+    margin-bottom: 15px;
+    font-size: 35px;
+    font-family: calibri; }
+  .contenedor-contacto h2 {
+    margin-bottom: 15px;
+    font-size: 30px;
+    font-family: calibri; }
+  .contenedor-contacto p {
+    font-size: 17px;
+    margin-bottom: 30px;
+    color: black;
+    font-weight: 700;
+    font-family: calibri; }
+  .contenedor-contacto form .campo-texto {
+    width: 100%;
+    font-size: 17px;
+    border: 1px solid;
+    margin-bottom: 20px;
+    border-radius: 3px;
+    outline: 0px; }
+  .contenedor-contacto form .boton-enviar {
+    padding: 15px;
+    font-size: 17px;
+    border: none;
+    background-color: #f4c6b8;
+    color: black; }
 
-.main-contacto{
-    background-color: whitesmoke;
+.ubicacion-contacto {
+  margin-top: 80px;
+  grid-template-rows: 1fr 3fr;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  font-family: calibri; }
+
+/*media queries desktop*/
+@media screen and (min-width: 1024px) {
+  .contenedor-contacto {
     display: grid;
     justify-items: center;
-}
-
-.h1-contacto{
-    text-align: center;
-    margin-bottom: 25px;
-    text-decoration: underline;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.h2-contacto{
-    text-align: center;
-    margin-bottom: 25px;
-    font-family: 'Anuphan', sans-serif;
-    font-family: 'Pompiere', cursive;
-}
-
-.contenedor-contacto{
-    display: grid;
-    grid-template-columns: 100%;
-    justify-content: center;
-    width: 80%;
-}
-
-.llamadas-contacto{
-    justify-items: center;
-    text-align: center;
-}
-
-.ig-contacto{
-    justify-content: center;
-    text-align: center;
-}
-
-.email-contacto{
-    justify-items: center;
-    text-align: center;
-    align-self: self-start;
-}
-
-.ubicacion-contacto{
-    justify-items: center;
-    text-align: center;
-}
+    align-items: center;
+    grid-template-columns: repeat(50, 50%); } }
 
 /*media queries*/
-
 /*media queries tablet*/
+@media screen and (min-width: 600px) {
+  .contenedor-productos-hc {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr); }
+  .contenedor-productos-intimates {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr); } }
 
-@media screen and (min-width:600px){
-    .contenedor-contacto{
-        display: grid;
-        grid-template-columns: repeat(2, 50%);
-        justify-items: center;
-        align-items: center;   
-    }
-
-    .contenedor-productos-hc{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        justify-items: center;
-        align-items: center;  
-    }
-
-    .contenedor-productos-intimates{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        justify-items: center;
-        align-items: center;  
-    }
-
-}
 /*media queries desktop*/
-
-@media screen and (min-width:1024px){
-    .contenedor-portadas{
-        display: grid;
-        grid-template-columns: repeat(2,50%);
-        width: 100%;
-    }
-
-    .contenedor-productos-hc{
-        display: grid;
-        grid-template-columns:repeat(3,33%);
-        grid-template-rows: repeat(3,33%);
-        justify-items: center;
-        justify-content: center;
-    }
-
-    .contenedor-productos-intimates{
-        display: grid;
-        grid-template-columns:repeat(3,33%);
-        grid-template-rows: repeat(2,50%);
-        justify-items: center;
-        justify-content: center;
-    }
-
-}
+@media screen and (min-width: 1024px) {
+  .contenedor-portadas {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    width: 100%; }
+  .contenedor-productos-hc {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(3, 33%); }
+  .contenedor-productos-intimates {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(2, 50%); } }
