--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,13 @@ footer {
   justify-self: center;
   width: 60%; }
 
+/*media queries desktop*/
+@media screen and (min-width: 1024px) {
+  .contenedor-portadas {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    width: 100%; } }
+
 .h1-haircare, .h1-intimates, .main-nosotros .h1-nosotros {
   text-align: center;
   text-decoration: underline;
@@ -112,6 +119,24 @@ footer {
     height: 100%;
     width: 100%;
     object-fit: cover; }
+
+/*media queries tablet*/
+@media screen and (min-width: 600px) {
+  .contenedor-productos-hc {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr); } }
+
+/*media queries desktop*/
+@media screen and (min-width: 1024px) {
+  .contenedor-productos-hc {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(3, 33%); } }
 
 .h1-haircare, .h1-intimates, .main-nosotros .h1-nosotros {
   text-align: center;
@@ -154,6 +179,24 @@ footer {
       width: 300px;
       height: 300px;
       object-fit: cover; }
+
+/*media queries tablet*/
+@media screen and (min-width: 600px) {
+  .contenedor-productos-intimates {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr); } }
+
+/*media queries desktop*/
+@media screen and (min-width: 1024px) {
+  .contenedor-productos-intimates {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(2, 50%); } }
 
 .h1-haircare, .h1-intimates, .main-nosotros .h1-nosotros {
   text-align: center;
@@ -241,38 +284,3 @@ footer {
     justify-items: center;
     align-items: center;
     grid-template-columns: repeat(50, 50%); } }
-
-/*media queries*/
-/*media queries tablet*/
-@media screen and (min-width: 600px) {
-  .contenedor-productos-hc {
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr); }
-  .contenedor-productos-intimates {
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr); } }
-
-/*media queries desktop*/
-@media screen and (min-width: 1024px) {
-  .contenedor-portadas {
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    width: 100%; }
-  .contenedor-productos-hc {
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: repeat(3, 33%);
-    grid-template-rows: repeat(3, 33%); }
-  .contenedor-productos-intimates {
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    grid-template-columns: repeat(3, 33%);
-    grid-template-rows: repeat(2, 50%); } }
