--- a/scss/html/_haircare.scss
+++ b/scss/html/_haircare.scss
@@ -38,5 +38,21 @@
         }  
 } 
 
+/*media queries tablet*/ 
+@media screen and (min-width:600px){    
+    .contenedor-productos-hc{ 
+        @include alinear-centro;
+        grid-template-columns: repeat(2, 1fr); 
+        grid-template-rows: repeat(4, 1fr);    
+    }
+} 
 
+/*media queries desktop*/ 
 
+@media screen and (min-width:1024px){ 
+    .contenedor-productos-hc{ 
+        @include alinear-centro; 
+        grid-template-columns:repeat(3,33%); 
+        grid-template-rows: repeat(3,33%);  
+    }
+} 
