modificando hoja de contacto y agregando nuevas imagenes de iconos

--- a/scss/html/_contacto.scss
+++ b/scss/html/_contacto.scss
@@ -25,7 +25,7 @@
             font-family: $fuente-secundaria;
         }
 
-        p{
+        div{
             font-size: 17px;
             margin-bottom: 30px;
             color: $color-negro;
