--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ footer {
     margin-bottom: 15px;
     font-size: 30px;
     font-family: calibri; }
-  .contenedor-contacto p {
+  .contenedor-contacto div {
     font-size: 17px;
     margin-bottom: 30px;
     color: black;
