--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -8,6 +8,7 @@
 
 //imports
 @import "html/generales";
+@import "utilidades/extend";
 @import "html/index";
 @import "html/haircare";
 @import "html/intimates";
