--- a/scss/utilidades/_extend.scss
+++ b/scss/utilidades/_extend.scss
@@ -1,5 +1,6 @@
 //import
 @import "mixin";
+/*estilos generales en algunas paginas utilizando extend*/
 
 //disposicion para los h1
 
@@ -18,3 +19,23 @@
     margin-right: 20%; 
     margin-bottom: 40px;
 }
+
+//aplicando extend 
+
+.h1-haircare{ 
+    @extend %disposicion-h1;
+}
+.h1-intimates{ 
+    @extend %disposicion-h1;
+}
+.contenedor-parrafos-haircare{ 
+    @extend %contenedores-parrafos-ventas;
+}
+.contenedor-parrafos-intimates{ 
+    @extend %contenedores-parrafos-ventas; 
+}
+.main-nosotros{
+    .h1-nosotros{ 
+        @extend %disposicion-h1; 
+    }
+}  
